[metadata]
name = iet
version = 0.0.1a
author = Khas Mek
summary = Infosec Engagement Tools.

[options]
packages = iet
include_package_data = True
install_requires =
    colorama
    six
    ipcalc
    pyperclip
    pyyaml
    rstr
    texttable

[options.entry_points]
console_scripts =
    iet-bootstrap = iet:iet_bootstrap
    iet-ip-lookup = iet:iet_ip_calc
    iet-wordlist-gen = iet:iet_wordlist_generator
