[metadata]
name = iet
version = 0.0.5b
author = Khas Mek
summary = Infosec Engagement Tools.

[options]
packages =
    iet
    iet.core
    iet.helpers
include_package_data = True
install_requires =
    colorama
    six
    ipcalc
    mmh3
    pyperclip
    pyyaml
    requests
    rstr
    texttable

[options.entry_points]
console_scripts =
    iet-bootstrap = iet:iet_bootstrap
    iet-cookie-monster = iet:iet_cookie_monster
    iet-ip-lookup = iet:iet_ip_calc
    iet-favicon-lookup = iet:iet_favicon_lookup
    iet-wordlist-gen = iet:iet_wordlist_generator
